--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/Uniswap/permit2.git"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^5.1.0"
   }
 }
